k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Nome da Deployment da sua aplicacao backend
  name: {SERVICE_NAME}
  labels:
    app: {SERVICE_NAME}
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: {SERVICE_NAME}
  template:
    metadata:
      labels:
        app: {SERVICE_NAME}
    spec:
      containers:
        - name: {SERVICE_NAME}
          # Imagem Docker da sua aplicacao (ajuste usuario/repositorio)
          image: {GH_SECRET_DOCKERHUB_USER}/{DOCKERHUB_REPO_BACK}:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8081
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "768Mi"
              cpu: "500m"
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            periodSeconds: 10
