k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  # Service (ClusterIP) expondo a sua aplicacao
  name: {SERVICE_NAME}
  labels:
    app: {SERVICE_NAME}
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8081
      protocol: TCP
  selector:
    app: {SERVICE_NAME}
